--- a/mooseleague/event.html
+++ b/mooseleague/event.html
@@ -134,6 +134,8 @@
                 target="_blank">
               <img ng-if="link.type === 'strava'" src="https://www.strava.com/favicon.ico" style="height: 1rem;">
               <img ng-if="link.type === 'youtube'" src="https://www.youtube.com/favicon.ico" style="height: 1rem;">
+              <img ng-if="link.type === 'reddit'" src="https://www.reddit.com/favicon.ico" style="height: 1rem;">
+              
             </a>
           </td>
         </tr>
